minor fix on the modal. Keyboard on mobile was on top of it.

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ td input:focus {
   justify-content: center;
 
   z-index: 1000;
-  padding-top: 30vh;
+  padding-top: 10vh;
 }
 
 .modal {
